@@ -17,6 +17,7 @@
  */
 package org.apache.knox.gateway.filter.rewrite.api;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.ServiceLoader;
@@ -33,8 +34,8 @@ public abstract class UrlRewriteStepDescriptorFactory {
   public static <T extends UrlRewriteStepDescriptor<?>> T create( String type ) {
     try {
       Class<? extends UrlRewriteStepDescriptor> descriptorClass = MAP.get( type );
-      return (T)descriptorClass.newInstance();
-    } catch( InstantiationException | IllegalAccessException e ) {
+      return (T)descriptorClass.getDeclaredConstructor().newInstance();
+    } catch(InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e ) {
       throw new IllegalArgumentException( type );
     }
   }
